# soda-demo-livekit-worker

./: AUDIO_PROCESSING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.agent  README.md  SETUP.md  agent.md  audio_processing.py  celery_app.py  celerybeat-schedule  db.py  deploy.sh  dispatch_agent.py  docker-compose-redis-postgres.yaml  docker-compose.yml  env.example  form_full_onboarding.json  form_integrated.json  form_non_integrated.json  form_supplier_general_info.json  get_dealers.py  livekit-agent.service  livekit.yaml  main.py  main_ariba.py  main_en.py  models.py  pyproject.toml  requirements.txt  schema.py  server.py  settings.py  tasks.py  tata_chemicals_products.json  test_batch.csv
